# libgoodboy

./: .gitignore  .gitmodules  CMakeLists.txt  Config.hxx.in  libGoodBoyConfig.hxx  libGoodBoyConfig.hxx.in  version
dependencies/: CMakeLists.txt
lib/: CMakeLists.txt
lib/helperscripts/: graph.py
lib/neural/: CMakeLists.txt
lib/neural/include/: ConnectableNeuron.hxx  ConnectableNeuronPool.hxx  GoodBoyNet.hxx  InputNeuron.hxx  InputNeuronPool.hxx  NeuralConfig.hxx  NeuralConnection.hxx  NeuralConnectionPool.hxx  NeuralGlobals.hxx  NeuralUtils.hxx  Neuron.hxx
lib/neural/src/: ConnectableNeuron.cxx  GoodBoyNet.cxx  InputNeuron.cxx  NeuralConfig.cxx  NeuralGlobals.cxx  Neuron.cxx
lib/neural/test/: CMakeLists.txt  NeuronTest.cxx  TestUtils.hxx
lib/pool/: CMakeLists.txt
lib/pool/include/: InstanceFactory.hxx  KeyedGroupCollection.hxx  ObjectPool.hxx  Resetable.hxx
lib/pool/test/: CMakeLists.txt  TestKeyedGroupCollection.cxx  TestObjectPool.cxx
lib/test/: CMakeLists.txt
lib/test/src/: EatyWorld.cxx  JSONTest.cxx  RepeaterTest.cxx  TEMPLATE.CXX  Test.cxx  Test2.cxx
lib/virtualworld/: CMakeLists.txt
lib/virtualworld/src/: main.cxx
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/include/core/: core.h
src/neural/: CMakeLists.txt
src/neural/include/neural/: ConnectableNeuron.h  InputNeuron.h  InputNeuron.hxx  NeuralConfig.h  NeuralConfig.hxx  NeuralConnection.h  NeuralNet.h  Neuron.h  Neuron.hxx  OutputableNeuron.h  Utils.h
src/neural/src/: InputNeuron.cxx  Neuron.cxx  Utils.cxx  core.cxx
src/test/: CMakeLists.txt
src/test/src/: Test.cxx  test.cxx
